// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUserDialog Snapshot of AddUserDialog whan adding is false  1`] = `
<Dialog
  autoDetectWindowHeight={true}
  autoScrollBodyContent={false}
  bodyStyle={
    Object {
      "overflowY": "unset",
    }
  }
  contentStyle={
    Object {
      "bottom": "0",
      "left": "0",
      "maxWidth": "none",
      "position": "fixed",
      "right": "0",
      "top": "0",
      "width": "57%",
    }
  }
  modal={false}
  onRequestClose={[Function]}
  open={false}
  overlayStyle={
    Object {
      "backgroundColor": "#797979",
      "opacity": "0.8",
    }
  }
  paperProps={
    Object {
      "style": Object {
        "backgroundColor": "none",
      },
      "zDepth": 0,
    }
  }
  repositionOnUpdate={true}
/>
`;

exports[`AddUserDialog Snapshot of AddUserDialog when adding is true 1`] = `
<Dialog
  autoDetectWindowHeight={true}
  autoScrollBodyContent={false}
  bodyStyle={
    Object {
      "overflowY": "unset",
    }
  }
  contentStyle={
    Object {
      "bottom": "0",
      "left": "0",
      "maxWidth": "none",
      "position": "fixed",
      "right": "0",
      "top": "0",
      "width": "57%",
    }
  }
  modal={false}
  onRequestClose={[Function]}
  open={true}
  overlayStyle={
    Object {
      "backgroundColor": "#797979",
      "opacity": "0.8",
    }
  }
  paperProps={
    Object {
      "style": Object {
        "backgroundColor": "none",
      },
      "zDepth": 0,
    }
  }
  repositionOnUpdate={true}
>
  <Translate(Connect(ReduxForm))
    closeDialog={[Function]}
  />
</Dialog>
`;
